--- a/pages/myAccount/settings.wxml
+++ b/pages/myAccount/settings.wxml
@@ -8,7 +8,7 @@
         </view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
       </navigator>
-      <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <navigator url="/pages/myAccount/setAccount/index" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">账号与安全</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
       </navigator>
