--- a/pages/myAccount/setAccount/index.wxml
+++ b/pages/myAccount/setAccount/index.wxml
@@ -1,7 +1,7 @@
 <view class="page">
   <view class="page__bd">
     <view class="weui-cells no-border">
-      <navigator url="" class="weui-cell weui-cell-sm weui-cell_access" hover-class="weui-cell_active">
+      <navigator url="/pages/myAccount/setAccount/bindPhone" class="weui-cell weui-cell-sm weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">
           <text class="weui-title">手机号</text>
           <text class="weui-info">132 2560 2410</text>
