--- a/app.wxss
+++ b/app.wxss
@@ -4,7 +4,11 @@
 page {
   background: #f9faf9;
   font-family: PingFangSC-Medium;
-  font-weight: 500;
+  font-weight: 400;
+}
+
+view {
+  line-height: 1;
 }
 
 .container {
@@ -17,11 +21,34 @@ page {
   box-sizing: border-box;
 }
 
+.header-section {
+  position: relative;
+  height: 352rpx;
+  background: linear-gradient(135deg, rgba(98, 233, 231, 1) 0%, rgba(46, 177, 175, 1) 100%);
+}
+
 .mt-40 {
   margin-top: 40rpx !important;
 }
 
+.mt-30 {
+  margin-top: 30rpx !important;
+}
+.mr-100{
+  margin-right:100rpx !important;
+}
+
+.text-c {
+  text-align: center;
+}
+.text-r{
+  text-align:right;
+}
+
+
+
 /*******/
+
 /* pages/myAccount/setMyInfo/updateName.wxss */
 
 .flash.weui-cells__title {
@@ -32,7 +59,6 @@ page {
 .tipsText {
   font-size: 24rpx;
   font-family: PingFangSC-Regular;
-  font-weight: 400;
   color: rgba(146, 147, 153, 1);
   line-height: 34rpx;
 }
@@ -54,23 +80,63 @@ page {
   color: rgba(48, 49, 49, 1);
   padding: 12rpx;
 }
-.btn-wrap{
-  margin-top:60rpx;
-  float:right;
-  margin-right:32rpx;
-  opacity: 0.8;
+
+.btn-wrap {
+  position: relative;
+  margin-top: 60rpx;
+  float: right;
+  margin-right: 32rpx;
 }
 
 button.flash-btn {
   width: 174rpx;
   height: 64rpx;
   background: linear-gradient(135deg, rgba(98, 233, 231, 1) 0%, rgba(46, 177, 175, 1) 100%);
-  color:#fff;
+  color: #fff;
   border-radius: 32rpx;
-  font-size:28rpx;
-  
+  font-size: 28rpx;
 }
-button.flash-btn:after{
-  border:none;
+
+.flash-btn-mask {
+  position: absolute;
+  top:16rpx;
+  left:10rpx;
+  width: 154rpx;
+  height: 56rpx;
+  background: linear-gradient(135deg, rgba(98, 233, 231, 1) 0%, rgba(46, 177, 175, 1) 100%);
+  border-radius: 32rpx;
+  opacity: 0.5;
+  filter: blur(10px);
 }
+
+button.focus-btn:after, button.flash-btn:after {
+  border: none;
+}
+
+.text-wrap {
+  line-height: 1;
+}
+
+.flash-text {
+  font-size: 30rpx;
+  color: rgba(146, 147, 153, 1);
+  line-height: 42rpx;
+}
+
+/**闪火图标***/
+
+.flash-icon {
+  width: 120rpx;
+  height: 120rpx;
+  background: rgba(46, 177, 175, 1);
+  border: 4rpx solid rgba(255, 255, 255, 1);
+  border-radius: 50%;
+}
+
+.flash-inline {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+
 
