--- a/pages/myAccount/index.wxml
+++ b/pages/myAccount/index.wxml
@@ -1,2 +1,53 @@
-<!--pages/myAccount/index.wxml-->
-<text>pages/myAccount/index.wxml</text>
+<view class="page">
+  <view class="header-section">
+    <view class="headImg-wrap">
+      <image src="../../images/indexHeadImg.png" class="indexImg"></image>
+    </view>
+    <view class="info-wrap flash-inline">
+      <view class="focus-btn-wrap flash-inline">
+        <button class="focus-btn">关注</button>
+        <view class="btn-mask"></view>
+      </view>
+      <view class="msg flash-inline"></view>
+    </view>
+  </view>
+  <view class="main-section">
+    <view class="userInfo-content">
+      <view class="username">ZoeyChen</view>
+      <view class="userInfo weui-flex">
+        <view class="weui-flex__item">
+          <view class="userId text">ID:15500500</view>
+          <view class="userSign text mt-18">取是能力，舍是境界</view>
+        </view>
+        <view class="foucus-data">
+          <view class="foucus-wrap flash-inline">
+            <view class="num">568</view>
+            <view class="userSign text text-r">关注</view>
+          </view>
+          <view class="foucus-wrap flash-inline">
+            <view class="num">15</view>
+            <view class="userSign text text-r">粉丝</view>
+          </view>
+        </view>
+      </view>
+    </view>
+    <view class="tab-content">
+      <view class="weui-tab">
+        <view class="weui-navbar">
+          <block wx:for="{{tabs}}" wx:key="*this">
+            <view class="weui-navbar_item"  id="{{index}}" bindtap="tabClick">
+              <view class="weui-navbar_title {{activeIndex == index ? 'active' : ''}}">{{item}}</view>
+            </view>
+          </block>
+        </view>
+        <view class="text total">共47个</view>
+        <view class="weui-tab__panel">
+          <view class="weui-tab__content" hidden="{{activeIndex != 0}}">作品</view>
+          <view class="weui-tab__content" hidden="{{activeIndex != 1}}">草稿</view>
+          <view class="weui-tab__content" hidden="{{activeIndex != 2}}">收藏</view>
+          <view class="weui-tab__content" hidden="{{activeIndex != 3}}">点赞</view>
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
