--- a/pages/myAccount/setMyInfo/updateAccount.wxml
+++ b/pages/myAccount/setMyInfo/updateAccount.wxml
@@ -5,7 +5,7 @@
   <view class="weui-cells no-border weui-cells_after-title">
     <view class="weui-cell weui-cell_input">
       <view class="weui-cell__bd">
-        <input class="weui-input input-text" value="{{flashAccount}}"/>
+        <input class="weui-input input-text" value="{{flashAccount}}" />
       </view>
     </view>
   </view>
@@ -13,6 +13,7 @@
     <text class="tipsText" decode='true'>{{tipscontent2}}</text>
   </view>
   <view class="btn-wrap">
-  <button class="flash-btn" size="mini"
-    hover-class="other-button-hover">完成</button></view>
+    <button class="flash-btn" size="mini" hover-class="other-button-hover">完成</button>
+     <view class="flash-btn-mask"></view>
+  </view>
 </view>
