--- a/pages/myAccount/settings.wxml
+++ b/pages/myAccount/settings.wxml
@@ -12,7 +12,7 @@
         <view class="weui-cell__bd">账号与安全</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
       </navigator>
-      <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+      <navigator url="/pages/myAccount/aboutUs" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         <view class="weui-cell__bd">关于我们</view>
         <view class="weui-cell__ft weui-cell__ft_in-access"></view>
       </navigator>
