--- a/pages/myAccount/index.wxml
+++ b/pages/myAccount/index.wxml
@@ -21,11 +21,11 @@
         </view>
         <view class="foucus-data">
           <view class="foucus-wrap flash-inline">
-            <view class="num">568</view>
+            <view class="num" bindtap="toFocusList">568</view>
             <view class="userSign text text-r">关注</view>
           </view>
           <view class="foucus-wrap flash-inline">
-            <view class="num">15</view>
+            <view class="num" bindtap="tofansList">15</view>
             <view class="userSign text text-r">粉丝</view>
           </view>
         </view>
