--- a/pages/message/index.wxml
+++ b/pages/message/index.wxml
@@ -1,24 +1,74 @@
 <view class="page">
   <view class="message-cate weui-flex">
     <view class="msg-wrap">
-      <view class="msg-item bg-green"></view>
+      <view class="msg-item bg-green"><text class="iconfont icon-shiliangzhinengduixiang"></text></view>
       <view class="msg-label">通知</view>
     </view>
     <view class="msg-wrap">
       <view class="msg-item bg-blue">
-      <view class="msg-tips mulit-tips">999+</view>
+        <view class="msg-tips mulit-tips">999+</view>
       </view>
       <view class="msg-label">评论</view>
     </view>
     <view class="msg-wrap">
-     <view class="msg-item bg-yellow"></view>
+      <view class="msg-item bg-yellow"></view>
       <view class="msg-label">点赞收藏</view>
     </view>
     <view class="msg-wrap">
-     <view class="msg-item bg-purple">
-     <view class="msg-tips single-tips">6</view>
-     </view>
+      <view class="msg-item bg-purple">
+        <view class="msg-tips single-tips">6</view>
+      </view>
       <view class="msg-label">粉丝</view>
+    </view>
+  </view>
+  <view class="message-list">
+    <view class="flash-item weui-flex">
+      <view class="myfocusImg-wrap">
+        <image class="myfocusImg" src="../../images/headImg.png"></image>
+      </view>
+      <view class="message-info weui-flex__item weui-flex">
+        <view class="user-wrap weui-flex__item">
+          <view class="userName">阿方少年</view>
+          <view class="user-messages">爱生活，爱分享的王小酱</view>
+        </view>
+        <text class="msg-time">11:08</text>
+      </view>
+    </view>
+    <view class="flash-item weui-flex">
+      <view class="myfocusImg-wrap">
+        <image class="myfocusImg" src="../../images/headImg.png"></image>
+      </view>
+      <view class="message-info weui-flex__item weui-flex">
+        <view class="user-wrap weui-flex__item">
+          <view class="userName">阿方少年</view>
+          <view class="user-messages">爱生活，爱分享的王小酱</view>
+        </view>
+        <text class="msg-time">11:08</text>
+      </view>
+    </view>
+    <view class="flash-item weui-flex">
+      <view class="myfocusImg-wrap">
+        <image class="myfocusImg" src="../../images/headImg.png"></image>
+      </view>
+      <view class="message-info weui-flex__item weui-flex">
+        <view class="user-wrap weui-flex__item">
+          <view class="userName">阿方少年</view>
+          <view class="user-messages">爱生活，爱分享的王小酱</view>
+        </view>
+        <text class="msg-time">11:08</text>
+      </view>
+    </view>
+    <view class="flash-item weui-flex">
+      <view class="myfocusImg-wrap">
+        <image class="myfocusImg" src="../../images/headImg.png"></image>
+      </view>
+      <view class="message-info weui-flex__item weui-flex">
+        <view class="user-wrap weui-flex__item">
+          <view class="userName">阿方少年</view>
+          <view class="user-messages">爱生活，爱分享的王小酱</view>
+        </view>
+        <text class="msg-time">11:08</text>
+      </view>
     </view>
   </view>
 </view>
