--- a/pages/myAccount/index.wxml
+++ b/pages/myAccount/index.wxml
@@ -1,5 +1,6 @@
 <view class="page">
   <view class="header-section">
+   <image src="../../images/acount_bg_iphonex@2x.png" style="width:100%;height:100%;"></image>
     <view class="headImg-wrap">
       <image src="../../images/indexHeadImg.png" class="indexImg"></image>
     </view>
