--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -9,7 +9,7 @@
 .flash-navbar__item {
   display: inline-block;
   vertical-align: middle;
-  margin-right: 118rpx;
+  margin-right: 59px;
   font-size: 32rpx;
 }
 
@@ -35,12 +35,18 @@
 .slider_selected {
   position: absolute;
   bottom: 0;
-  left: 142px;
+  left: 270rpx;
+  width: 37rpx;
+  height: 11rpx;
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
 }
 
 .label-content {
   padding-top: 16rpx;
-  overflow:hidden; 
+  overflow: hidden;
 }
 
 .flash-tab__content {
@@ -73,7 +79,7 @@
   -webkit-column-gap: 20rpx;
   column-gap: 20rpx;
   width: 100%;
-  margin-top:20rpx;
+  margin-top: 20rpx;
 }
 
 .note-item {
@@ -102,8 +108,9 @@
   line-height: 36rpx;
   margin-bottom: 20rpx;
 }
-.note-handle{
-   justify-content: space-between; 
+
+.note-handle {
+  justify-content: space-between;
 }
 
 .note-personImg {
@@ -119,7 +126,7 @@
   display: inline-block;
   vertical-align: middle;
   font-size: 22rpx;
-  width:130rpx;
+  width: 130rpx;
   font-family: PingFangSC-Regular;
   color: rgba(146, 147, 153, 1);
   line-height: 32rpx;
