--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -49,6 +49,49 @@
   overflow: hidden;
 }
 
+.nav {
+  width: 100%;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: #fff;
+}
+
+.search_icon {
+  position: absolute;
+  top: 62rpx;
+  left: 34rpx;
+  width: 31rpx;
+  height: 32rpx;
+}
+
+.title_text {
+  width: 100%;
+  height: 45px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 10;
+  text-align: center;
+  line-height: 45px;
+  font-size: 36rpx;
+  font-family: PingFangSC-Medium;
+  font-weight: 500;
+  color: rgba(48, 49, 49, 1);
+}
+
+.arrow_down {
+  width: 7px;
+  height: 6px;
+}
+
+.inline {
+  display: inline-block;
+  vertical-align: middle;
+}
+
 .flash-tab__content {
   padding: 0 34rpx 0 40rpx;
 }
