--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,13 +7,13 @@
     <view class="flash-tab">
       <view class="flash-navbar">
         <block wx:for="{{tabs}}" wx:key="*this">
-          <view id="{{index}}" class="flash-navbar__item" bindtap="tabClick">
+          <view data-index="{{index}}" class="flash-navbar__item" id="first_nav"  bindtap="tabClick">
             <view class="weui-navbar__title inline {{activeIndex == index ? 'active' : ''}}">{{item}}</view>
             <image class="arrow_down inline" src="../../images/public_navmore@2x.png" wx:if="{{index==0}}" hidden="{{arrowShow}}"></image>
           </view>
         </block>
         <image src="../../images/public_select@2x.png" class="slider_selected"
-         style="left:{{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"
+         style="left:{{sliderLeft}}rpx; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"
         ></image>
       </view>
       <view class="flash-tab__panel">
