--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,20 +1,20 @@
 <view class="page">
-<view class="nav" style='height:{{navH}}px'>
-  <image src="../../images/public_search@2x.png" class="search_icon"></image>
-  <view class="title_text">闪火</view>
-</view>
+  <view class="nav" style='height:{{navH}}px'>
+    <view class="search-wrap" bindtap="toSearch">
+      <image src="../../images/public_search@2x.png" class="search_icon"></image>
+    </view>
+    <view class="title_text" bindtap="toSearch">闪火</view>
+  </view>
   <view class="page__bd" style="margin-top:{{navH}}px">
     <view class="flash-tab">
       <view class="flash-navbar">
         <block wx:for="{{tabs}}" wx:key="*this">
-          <view data-index="{{index}}" class="flash-navbar__item" id="first_nav"  bindtap="tabClick">
+          <view data-index="{{index}}" class="flash-navbar__item" id="first_nav" bindtap="tabClick">
             <view class="weui-navbar__title inline {{activeIndex == index ? 'active' : ''}}">{{item}}</view>
             <image class="arrow_down inline" src="../../images/public_navmore@2x.png" wx:if="{{index==0}}" hidden="{{arrowShow}}"></image>
           </view>
         </block>
-        <image src="../../images/public_select@2x.png" class="slider_selected"
-         style="left:{{sliderLeft}}rpx; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"
-        ></image>
+        <image src="../../images/public_select@2x.png" class="slider_selected" style="left:{{sliderLeft}}rpx; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></image>
       </view>
       <view class="flash-tab__panel">
         <view class="flash-tab__content" hidden="{{activeIndex != 0}}">
@@ -90,7 +90,7 @@
                 </view>
               </view>
             </view>
-    
+
           </view>
         </view>
         <view class="flash-tab__content" hidden="{{activeIndex != 1}}">
