--- a/pages/comment/index.wxml
+++ b/pages/comment/index.wxml
@@ -1,7 +1,7 @@
 <view class="page">
   <view class="page__bd">
     <view class="commentList">
-      <view class="flash-item weui-flex">
+      <view class="flash-item weui-flex" bindtap="toCommentAction">
         <view class="myfocusImg-wrap">
           <image class="myfocusImg" src="../../images/headImg.png"></image>
         </view>
