--- a/app.wxss
+++ b/app.wxss
@@ -174,3 +174,15 @@ button.focus-btn:after, button.flash-btn:after {
   white-space: nowrap;
   word-wrap: normal;
 }
+
+/***清除浮动**/
+  .clearfix:after{/*伪元素是行内元素 正常浏览器清除浮动方法*/
+        content: "";
+        display: block;
+        height: 0;
+        clear:both;
+        visibility: hidden;
+    }
+    
+
+
