--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -202,3 +202,32 @@
   color: rgba(46, 177, 175, 1);
   line-height: 36rpx;
 }
+
+.releaseBtn-wrap{
+  position:relative;
+}
+
+.releaseBtn{
+  position:fixed;
+  right:32rpx;
+  bottom:54rpx;
+  width:88rpx;
+  height:88rpx; 
+}
+
+.releaseImg{
+  display: inline-block;
+  width:100%;
+  height:100%;
+}
+
+.releaseBtn-mask{
+  position:absolute;
+  top:28rpx;
+  left:12rpx;
+  width:64rpx;
+  height:64rpx;
+  background:linear-gradient(135deg,rgba(98,233,231,1) 0%,rgba(46,177,175,1) 100%);
+  opacity:0.6;
+  filter:blur(10rpx);
+}
